# TimeSynLinux

./: CMakeLists.txt  README.md
include/: client.h  getTime.h  server.h
src/: client.cpp  getTime.cpp  main.cpp  server.cpp
